--- a/wp-content/themes/suno/resources/styles/frontend/layouts/header/_header.scss
+++ b/wp-content/themes/suno/resources/styles/frontend/layouts/header/_header.scss
@@ -10,7 +10,7 @@ $component-name: "headerSuno";
   font-weight: 600;
   letter-spacing: 0.8px;
   text-transform: uppercase;
-  z-index: 2;
+  z-index: 3;
   @media screen and (max-width: 1220px) {
     height: 56px;
   }
